@@ -23,6 +23,10 @@
       - Fixed bug in display of current TIA frame in the UI; depending on
         how breakpoints were set, it was sometimes off by one.
 
+      - Fixed RAM widget Search/Compare textboxes; entering any data and
+        then pressing 'Enter' / clicking 'OK' locked the UI until exiting
+        and re-entering the debugger.
+
       - Changed display for various TIA position counters to decimal
         (from hex) in the TIA tab.  Related to this, all data input
         widgets in the UI now have the ability to enter binary,
